Attempt fix of z-order bug on mobile Chrome

--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -22,7 +22,7 @@
 
 html {
     font-family: sans-serif;
-    overflow-y: hidden;
+    overflow-y: auto;
 
     body {
         @extend .parallax;
